feat: Deploy fix

--- a/data_pipelines/03-document-extraction.ipynb
+++ b/data_pipelines/03-document-extraction.ipynb
@@ -111,12 +111,15 @@
     "input_document = \"raw_documents/prepared/Amazon/annual_report_2022.pdf\"\n",
     "\n",
     "# Start the document analysis\n",
-    "document = extractor.start_document_analysis(\n",
+    "# document = extractor.start_document_analysis(\n",
+    "#     file_source=input_document,\n",
+    "#     s3_upload_path=f\"s3://{default_sagemaker_bucket}/input_documents/\",  # Path to upload the document to S3\n",
+    "#     s3_output_path=f\"s3://{default_sagemaker_bucket}/output_documents/\", # Path for the Textract output in S3\n",
+    "#     features=[TextractFeatures.LAYOUT],  # Specify the features to extract, e.g., layout\n",
+    "#     save_image=False  # Do not save images in the output\n",
+    "# )\n",
+    "document = extractor.detect_document_text(\n",
     "    file_source=input_document,\n",
-    "    s3_upload_path=f\"s3://{default_sagemaker_bucket}/input_documents/\",  # Path to upload the document to S3\n",
-    "    s3_output_path=f\"s3://{default_sagemaker_bucket}/output_documents/\", # Path for the Textract output in S3\n",
-    "    features=[TextractFeatures.LAYOUT],  # Specify the features to extract, e.g., layout\n",
-    "    save_image=False  # Do not save images in the output\n",
     ")"
    ]
   },
@@ -216,7 +219,7 @@
    "outputs": [],
    "source": [
     "# llm_model_id = \"anthropic.claude-3-haiku-20240307-v1:0\"\n",
-    "llm_model_id = \"anthropic.claude-3-5-sonnet-20241022-v2:0\""
+    "llm_model_id = \"us.anthropic.claude-3-5-sonnet-20241022-v2:0\""
    ]
   },
   {
