--- a/data_pipelines/05-2entities-extraction-to-structured-metadata.ipynb
+++ b/data_pipelines/05-2entities-extraction-to-structured-metadata.ipynb
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4458749f-26f8-4a67-92c4-eb8deca326fe",
    "metadata": {
     "tags": []
@@ -604,6 +604,7 @@
    ],
    "source": [
     "map_doc_and_entity_to_chuncks = {}\n",
+    "# Tim cac chunk co metadata va lien ket voi ten cua doc trong mot dict \n",
     "\n",
     "for document in documents_processed:\n",
     "    print(\"-\" * 79)\n",
@@ -917,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "d06a43e5-c59b-4c43-85e5-9b116966f531",
    "metadata": {
     "tags": []
@@ -982,6 +983,7 @@
     }
    ],
    "source": [
+    "# Define the template for creating an example text\n",
     "example_template = \"\"\"\n",
     "Example {index}: Given the information inside <schema> and <documents>, the correct output is inside <json> below:\n",
     "\n",
@@ -999,10 +1001,13 @@
     "</json>\n",
     "\"\"\"\n",
     "\n",
+    "# Example data for three entities: revenue, human_capital, and risks\n",
     "example_pairs = {\n",
     "    \"revenue\": [\n",
     "        {\n",
+    "            # Excerpt of a document related to revenue\n",
     "            \"document_excerpts\": \"Page 20 - After the 10% increase in the number of customers, the sales for Company Inc in 2019 was $513,983 million.\",\n",
+    "            # JSON-formatted output with reasoning and unit information\n",
     "            \"json_output\": json.dumps(\n",
     "                {\n",
     "                    \"revenue\": 324483000000,\n",
@@ -1016,7 +1021,9 @@
     "    ],\n",
     "    \"human_capital\": [\n",
     "        {\n",
+    "            # Excerpt of a document related to human capital\n",
     "            \"document_excerpts\": \"Despite the COVID-19 pandemic, In 2019, Company Inc employed 349,329 employees worldwide.\",\n",
+    "            # JSON-formatted output with reasoning\n",
     "            \"json_output\": json.dumps(\n",
     "                {\n",
     "                    \"human_capital\": 349329,\n",
@@ -1028,7 +1035,9 @@
     "    ],\n",
     "    \"risks\": [\n",
     "        {\n",
+    "            # Excerpt of a document related to risks\n",
     "            \"document_excerpts\": \"\"\"Competition continues to intensify, including with the development of new business models and the entry of new and well-funded competitors, and as our competitors enter into business combinations or alliances and established companies in other market segments expand to become competitive with our business. In addition, new and enhanced technologies, including search, web and infrastructure computing services, digital content, etc.\"\"\",\n",
+    "            # JSON-formatted output with reasoning\n",
     "            \"json_output\": json.dumps(\n",
     "                {\n",
     "                    \"risks\": \"The main risks are: \\n* Competition from new entrants\\n* Increased competition because of new technologies, \",\n",
@@ -1040,23 +1049,31 @@
     "    ],\n",
     "}\n",
     "\n",
+    "\n",
+    "# Dictionary to store few-shot examples for each entity\n",
     "few_shot_examples = {}\n",
     "\n",
+    "# Generate formatted examples for each entity\n",
     "for entity in entity_list.keys():\n",
+    "    # Initialize combined examples as an empty string\n",
     "    combined_examples = \"\\n\"\n",
+    "    # Iterate through the examples of the current entity\n",
     "    for idx, current_example in enumerate(example_pairs[entity]):\n",
+    "        # Serialize the schema of the current entity into JSON format\n",
     "        serialized_json_schema = json.dumps(\n",
-    "            entity_schema[entity].schema(), indent=1\n",
+    "            entity_schema[entity][\"schema\"](), indent=1\n",
     "        )\n",
+    "        # Format the template with the relevant data\n",
     "        combined_examples += example_template.format(\n",
     "            index=idx + 1,\n",
     "            serialized_json_schema=serialized_json_schema,\n",
     "            document_excerpts=current_example[\"document_excerpts\"],\n",
     "            json_output=current_example[\"json_output\"],\n",
     "        )\n",
+    "    # Store the combined examples in the few_shot_examples dictionary\n",
     "    few_shot_examples[entity] = combined_examples\n",
     "\n",
-    "\n",
+    "# Print an example for \"revenue\" to verify the output\n",
     "print(few_shot_examples[\"revenue\"])"
    ]
   },
@@ -1084,18 +1101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "b9aba565-0386-41da-b38c-d6f926118ff4",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import json\n",
-    "from langchain.chains import LLMChain\n",
-    "from langchain.prompts import PromptTemplate\n",
-    "from langchain.schema import HumanMessage, SystemMessage\n",
-    "from langchain.output_parsers import PydanticOutputParser\n",
+    "# Import necessary libraries\n",
+    "import json  # For JSON serialization and deserialization\n",
+    "from langchain.chains import LLMChain  # Chain class for executing tasks with LLMs\n",
+    "from langchain.prompts import PromptTemplate  # Template class for formatting prompts\n",
+    "from langchain.schema import HumanMessage, SystemMessage  # Message schemas for interactions\n",
+    "from langchain.output_parsers import PydanticOutputParser  # For parsing model outputs into structured objects\n",
     "\n",
     "\n",
     "ENTITY_EXTRACTION_PROMPT_TEMPLATE = \"\"\"\\n\\nHuman: Extract the information described by the json schema inside the <schema></schema> XML tags from the documents inside <documents></documents> XML tags.\n",
@@ -1134,32 +1152,47 @@
     "\n",
     "\\n\\nAssistant: <json>\\n\"\"\"\n",
     "\n",
+    "# Initialize the LLM chain with a language model and a prompt template\n",
     "llm_chain = LLMChain(\n",
-    "    llm=claude_llm,\n",
-    "    prompt=PromptTemplate.from_template(ENTITY_EXTRACTION_PROMPT_TEMPLATE),\n",
+    "    llm=claude_llm,  # Your initialized language model instance\n",
+    "    prompt=PromptTemplate.from_template(ENTITY_EXTRACTION_PROMPT_TEMPLATE),  # Entity extraction template\n",
     ")\n",
     "\n",
     "\n",
-    "def get_extracted_entity(\n",
-    "    entity, metadata, chunks, entity_schema, few_shot_examples_dict\n",
-    "):\n",
-    "    \"\"\"Prepare the prompt for entity extraction.\"\"\"\n",
+    "\n",
+    "def get_extracted_entity(entity, metadata, chunks, entity_schema, few_shot_examples_dict):\n",
+    "    \"\"\"\n",
+    "    Prepare the prompt and call the LLM to extract an entity.\n",
+    "\n",
+    "    Args:\n",
+    "        entity (str): The entity type to extract (e.g., \"Person\").\n",
+    "        metadata (dict): Metadata about the document (e.g., company name, year).\n",
+    "        chunks (list): Document excerpts for context.\n",
+    "        entity_schema (dict): JSON schema defining the entity structure.\n",
+    "        few_shot_examples_dict (dict): Few-shot examples for the entity type.\n",
+    "\n",
+    "    Returns:\n",
+    "        result (str): The extracted entity data as a string.\n",
+    "        prompt (str): The prompt used for the LLM.\n",
+    "    \"\"\"\n",
+    "    # Combine all chunks into a single string of document excerpts\n",
     "    document_excerpts = \"\"\n",
     "    for chunk in chunks:\n",
-    "        document_excerpts += \"\\n\".join(\n",
-    "            [\n",
-    "                f\"- Below Excerpt of page {chunk.metadata['original_page_number']:}\",\n",
-    "                \"\\n\",\n",
-    "                f\"{add_tables(chunk)}\",\n",
-    "            ]\n",
-    "        )\n",
+    "        document_excerpts += \"\\n\".join([\n",
+    "            f\"- Below Excerpt of page {chunk.metadata['original_page_number']:}\",\n",
+    "            \"\\n\",\n",
+    "            f\"{add_tables(chunk)}\",  # Function to process and format chunk content\n",
+    "        ])\n",
     "\n",
-    "    # parser = PydanticOutputParser(pydantic_object=entity_schema[entity])\n",
-    "    few_shot_examples = few_shot_examples_dict.get(entity, \"\")\n",
+    "    # Serialize the entity schema for prompt inclusion\n",
     "    serialized_json_schema = json.dumps(\n",
     "        entity_schema[entity].schema(), indent=1\n",
     "    )\n",
     "\n",
+    "    # Get any relevant few-shot examples for the entity type\n",
+    "    few_shot_examples = few_shot_examples_dict.get(entity, \"\")\n",
+    "    # Hai cai nay giong het nhau chi khac la cai kia lay vo thoi\n",
+    "    # Format the prompt with all necessary details\n",
     "    prompt = ENTITY_EXTRACTION_PROMPT_TEMPLATE.format(\n",
     "        entity=entity,\n",
     "        metadata=metadata,\n",
@@ -1170,6 +1203,7 @@
     "        few_shot_examples=few_shot_examples,\n",
     "    )\n",
     "\n",
+    "    # Use the LLM chain to predict the entity extraction result\n",
     "    result = llm_chain.predict(\n",
     "        entity=entity,\n",
     "        metadata=metadata,\n",
@@ -1185,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "b88834a9-1fca-41a8-bdec-92bff1821ed1",
    "metadata": {
     "tags": []
@@ -1218,13 +1252,17 @@
     "# Define a dictionary to save all the extracted items\n",
     "import json\n",
     "\n",
+    "\n",
+    "# Define a dictionary to save all extracted entities\n",
     "extracted_entities = []\n",
-    "k = 2\n",
+    "k = 2  # Example parameter (unused in the code)\n",
     "\n",
     "# Create a prompt for each combination of document and entity\n",
+    "# Process each document and extract entities\n",
     "for document in list(map_doc_and_entity_to_chuncks.keys()):\n",
     "    # You could additionally use the metadata of documents defined in S3 to customize these prompts\n",
     "    # This metadata can also be found in the `documents_processed` variable under the key `metadata`.\n",
+    "    # Extract the document's name (e.g., the file name from the path)\n",
     "    document_name = document.split(\"/\")[-1]\n",
     "    # extracted_entities[document] = {}\n",
     "\n",
@@ -1236,16 +1274,18 @@
     "        print(\"-\" * 79)\n",
     "        print(f\"Starting extraction of {entity} from document {document_name}\")\n",
     "        try:\n",
+    "            # Get the chunks and metadata for the document and entity\n",
     "            chunks = map_doc_and_entity_to_chuncks[document][entity][\"chunks\"]\n",
     "            if not chunks:\n",
-    "                print(\n",
-    "                    f\"WARNING: The input chunks are empty for {document} and {entity}. Skipping.\"\n",
-    "                )\n",
+    "                print(f\"WARNING: The input chunks are empty for {document} and {entity}. Skipping.\")\n",
     "                continue\n",
+    "\n",
     "            metadata = map_doc_and_entity_to_chuncks[document][entity][\"metadata\"]\n",
     "            # extraction_example = entity_list[entity]['example']\n",
     "            # extraction_example = extraction_example,\n",
     "            current_entity_result.update(metadata)\n",
+    "\n",
+    "            # Extract the entity using the helper function\n",
     "            result, prompt = get_extracted_entity(\n",
     "                entity=entity,\n",
     "                metadata=metadata,\n",
@@ -1257,6 +1297,7 @@
     "        except Exception as e:\n",
     "            print(f\"Exception: {e}\")\n",
     "\n",
+    "        # Save the results and the prompt used\n",
     "        current_entity_result[\"result\"] = result\n",
     "        current_entity_result[\"prompt\"] = prompt\n",
     "        extracted_entities.append(current_entity_result)\n",
