fix: Fix before test deploy with frontend

--- a/data_pipelines/05-2entities-extraction-to-structured-metadata.ipynb
+++ b/data_pipelines/05-2entities-extraction-to-structured-metadata.ipynb
@@ -81,13 +81,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "58535b5f-5fb9-403d-9fb4-485e0eb36b59",
    "metadata": {},
    "outputs": [],
    "source": [
     "# LLM_MODEL_ID = \"anthropic.claude-v1\"\n",
-    "LLM_MODEL_ID = \"anthropic.claude-v2\""
+    "LLM_MODEL_ID = \"us.anthropic.claude-3-5-haiku-20241022-v1:0\""
    ]
   },
   {
